# pathadder

./: LICENSE  MANIFEST.in  Makefile  README.md  pathadder.ipynb  pyproject.toml  setup.py
pathadder/: _version.py  pathadder.ipynb
src/pathadder/: __init__.py  _version.py  pathadder.py
